refactor(pom): update to spring-ai:1.0.0-M8